--- a/index.html
+++ b/index.html
@@ -9,6 +9,19 @@
 
 </head>
 <body>
+    <main>
+        <article>
+            <img src="/avatar (1).png" alt="awatar użytkownika"/>
+            <header> 
+                <h1>Imię i nazwisko</h1>
+                <p> frontent developer</p>
+                </header>
+                <p> Programista z kilkunastoletnim doświadczeniem, fotograf, operator drona, właściciel Sokoła Millennium (na razie tylko z Lego), prelegent i szkoleniowiec. Uwielbia eksperymentować z nowymi technologiami, w swojej twórczości ocierając się o sztukę. </p>
+                <p> W sieci: <a href="#"> Facebook </a>, <a href="#">GitHub</a>, <a href="#">Instagram.</a></p>
+
+                
+        </article>
+    </main>
     
 </body>
 </html>
