--- a/index.html
+++ b/index.html
@@ -6,11 +6,12 @@
     <title>Projekt</title>
     <link href="/normalize.css" type="text.css" rel="stylesheet">
     <link href="style.css" type="text.css" rel="stylesheet">
+    <link href="style.css" rel="stylesheet" type=" text/css">
 
 </head>
 <body>
     <main>
-        <article>
+        <article class="card">
             <img src="/avatar (1).png" alt="awatar użytkownika"/>
             <header> 
                 <h1>Imię i nazwisko</h1>
